[Refactored] OC-1286 #comment Implemented pub-sup for OcLogger, and added 'terminated' state for execution #time 1m